--- a/style.css
+++ b/style.css
@@ -96,11 +96,17 @@ body {
 }
 #progress {
   background: #48a300;
-  height: 30px;
-  top: 356px;
-  left: 435px;
+  height: 100%;
+  width: 100%;
   gap: 0px;
-}
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+ }
+ .progress-value{
+  color: white;
+ }
 .error-message {
   width: 320px;
   height: 22px;
@@ -143,6 +149,7 @@ body {
   left: 454px;
   gap: 0px;
   border: 2px 0px 0px 0px;
+  cursor: pointer;
   opacity: 0px;
   border: 2px solid #61481c4d;
   background: #ffffff;
